--- a/nodes/wenode.yaml
+++ b/nodes/wenode.yaml
@@ -32,11 +32,60 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- cipher: aes-128-gcm
-  name: 🇧🇬_BG_保加利亚
-  password: shadowsocks
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_1
+  password: rNBfNuuANFCAk7KB
+  port: 9056
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇬🇧_GB_英国_1
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 51.15.15.82
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: 🇷🇺_RU_俄罗斯_2
+  password: dongtaiwang.com
+  port: 23456
+  server: 185.22.155.228
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_3
+  password: GA9KzeEgvfxNrgmM
+  port: 9019
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_4
+  password: f8npKgNzdkss2ytn
+  port: 9088
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
+  password: amazonskr05
   port: 443
-  server: 149.34.244.82
+  server: 52.32.68.164
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_5
+  password: rpgbNnU9rDDU4aWZ
+  port: 9094
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_6
+  password: FG5ddLsMPbV5CutE
+  port: 9050
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
@@ -46,108 +95,59 @@ proxies:
   server: 54.244.200.142
   type: ss
   udp: true
-- cipher: rc4-md5
-  name: 🇺🇸_US_美国_2
-  password: 14fFPrbezE3HDZzsMOr6
-  port: 8080
-  server: 79.110.53.169
-  type: ss
-  udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_1
-  password: rNBfNuuANFCAk7KB
-  port: 9056
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_2
-  password: f8npKgNzdkss2ytn
-  port: 9088
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇨🇦_CA_加拿大
-  password: PCnnH6SQSnfoS27
-  port: 8090
-  server: 23.154.136.100
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_3
+  name: 🇷🇺_RU_俄罗斯_7
   password: M3t2ZEQcMGRWBjRa
   port: 9011
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_4
-  password: ZET59LF6DvCC8KVt
-  port: 9005
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-  password: amazonskr05
-  port: 443
-  server: 34.222.136.128
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_5
-  password: FAdUvMJUq5vDgKEq
-  port: 9006
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇨🇭_CH_瑞士
-  password: fMcrsQuZhCNiHBmXT80AhQ3mPK5alh/iLuDz4pILlYU=
-  port: 44915
-  server: 138.124.60.136
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_6
-  password: U6qnYRhfyDmn8sgn
-  port: 9041
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_7
-  password: rpgbNnU9rDDU4aWZ
-  port: 9094
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
   name: 🇷🇺_RU_俄罗斯_8
-  password: ebrYpJsRfFtlKuO2HygBoD
-  port: 20255
-  server: 62.133.63.154
+  password: fG2artUmHfNT2cX7
+  port: 9018
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_9
-  password: XPtzA9sCug3SPR4c
-  port: 9025
+  password: UTJA57ypk2XKQpnm
+  port: 9033
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: chacha20-ietf-poly1305
-  name: 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
-  password: 21586aab-3a37-4f55-b8b7-5ae69572d403
-  port: 1935
-  server: 85.133.241.75
+  name: 🇩🇪_DE_德国->🇺🇸_US_美国
+  password: 4a2rfixophdjffa8KVA4Aa
+  port: 8080
+  server: 45.87.175.181
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_10
-  password: UkXRsXvR6buDMG2Y
-  port: 9001
+  password: QWDDvVE9npNurQfA
+  port: 9026
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_2
+  password: amazonskr05
+  port: 443
+  server: 52.89.164.115
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 146.70.61.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_11
+  password: BNmAXXxAHYpTRdzu
+  port: 9020
   server: 217.30.10.18
   type: ss
   udp: true
@@ -155,7 +155,84 @@ proxies:
   name: 🇺🇸_US_美国_3
   password: amazonskr05
   port: 443
-  server: 54.201.174.149
+  server: 54.218.229.170
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  password: amazonskr05
+  port: 443
+  server: 35.88.126.102
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_12
+  password: TN2YqghxeFDKZfLU
+  port: 9037
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_13
+  password: ueLXVkvh4hckhErQ
+  port: 9060
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 194.5.215.59
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_14
+  password: Lp27rqyJq72bZsqX
+  port: 9045
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-128-gcm
+  name: 🇬🇧_GB_英国_2
+  password: shadowsocks
+  port: 443
+  server: 212.102.53.193
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇯🇵_JP_日本
+  password: amazonskr05
+  port: 443
+  server: 34.222.132.123
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇨🇳_CN_中国
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 107.155.57.11
+  type: ss
+  udp: true
+- cipher: chacha20-ietf
+  name: 🇺🇸_US_美国->🇨🇳_CN_中国
+  password: asd123456
+  port: 8388
+  server: 137.175.113.215
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇺🇸_US_美国_4
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 51.158.244.38
+  type: ss
+  udp: true
+- cipher: aes-128-cfb
+  name: 🇺🇸_US_美国_5
+  password: shadowsocks
+  port: 443
+  server: 184.170.241.194
   type: ss
   udp: true
 proxy-groups:
@@ -163,46 +240,68 @@ proxy-groups:
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -211,93 +310,137 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -320,24 +463,35 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇧🇬_BG_保加利亚
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
+  - 🇬🇧_GB_英国_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_5
-  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
+  - 🇺🇸_US_美国_1
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
   - 🇷🇺_RU_俄罗斯_9
-  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  - 🇩🇪_DE_德国->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_2
+  - 🇬🇧_GB_英国->🇰🇷_KR_韩国
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_12
+  - 🇷🇺_RU_俄罗斯_13
+  - 🇷🇴_RO_罗马尼亚->🏳️_unKnow_未知
+  - 🇷🇺_RU_俄罗斯_14
+  - 🇬🇧_GB_英国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
