--- a/nodes/nodefree.yaml
+++ b/nodes/nodefree.yaml
@@ -33,150 +33,94 @@ mixed-port: 7890
 mode: rule
 proxies:
 - cipher: chacha20-ietf-poly1305
-  name: 🇮🇷_IR_伊朗
+  name: 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  password: bfWZbxtXnPX6sSF_n9byxw
+  port: 2222
+  server: 156.253.237.131
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 185.231.233.112
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_1
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 185.47.252.251
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 156.146.40.194
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: 🇮🇷_IR_伊朗_1
+  password: TurbooServer=
+  port: 443
+  server: 178.239.148.208
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  password: 560b7d65c1f4b12a
+  port: 16431
+  server: 194.87.69.122
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: 🇮🇷_IR_伊朗_2
   password: zUQvFioae7KzAZ2GCMgNum
   port: 9848
   server: 83.147.216.173
   type: ss
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇩🇪_DE_德国_1
-  password: cvII85TrW6n0OGyfpHVS1u
-  port: 8080
-  server: 45.87.175.157
-  type: ss
-  udp: true
-- cipher: rc4-md5
-  name: 🇺🇸_US_美国_1
-  password: 14fFPrbezE3HDZzsMOr6
-  port: 8080
-  server: 23.251.121.242
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
+- cipher: aes-256-cfb
   name: 🇺🇸_US_美国_2
-  password: kDWvXYZoTBcGkC4
-  port: 8882
-  server: 23.157.40.87
+  password: amazonskr05
+  port: 443
+  server: 35.94.25.109
   type: ss
   udp: true
-- cipher: aes-256-gcm
+- cipher: aes-256-cfb
   name: 🇺🇸_US_美国_3
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 23.157.40.5
+  password: amazonskr05
+  port: 443
+  server: 52.25.110.203
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇲🇩_MD_摩尔多瓦
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 91.132.94.200
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇬🇧_GB_英国
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 62.100.205.48
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇺🇸_US_美国_4
   password: amazonskr05
   port: 443
-  server: 35.88.145.21
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_5
-  password: PCnnH6SQSnfoS27
-  port: 8091
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇨🇦_CA_加拿大
-  password: faBAoD54k87UJG7
-  port: 2376
-  server: 23.154.136.247
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_6
-  password: KixLvKzwjekG00rm
-  port: 8080
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_7
-  password: kDWvXYZoTBcGkC4
-  port: 8881
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇷🇺_RU_俄罗斯
-  password: dongtaiwang.com
-  port: 23456
-  server: 185.22.155.228
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_8
-  password: lGqs95QkFHo2NV
-  port: 5498
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_9
-  password: Y6R9pAtvxxzmGC
-  port: 3306
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_10
-  password: KixLvKzwjekG00rm
-  port: 5500
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_11
-  password: Y6R9pAtvxxzmGC
-  port: 5000
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_12
-  password: Y6R9pAtvxxzmGC
-  port: 3306
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_13
-  password: pKEW8JPByTVTLtM
-  port: 443
-  server: 23.157.40.87
+  server: 34.221.176.100
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇩🇪_DE_德国_2
+  name: 🇷🇴_RO_罗马尼亚
   password: f8f7aCzcPKbsF8p3
   port: 989
-  server: 46.183.184.60
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_14
-  password: XKFKl2rULjIp74
-  port: 8008
-  server: 23.157.40.87
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_15
-  password: TEzjfAYq2IjtuoS
-  port: 6679
-  server: 23.157.40.5
-  type: ss
-  udp: true
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_16
-  password: e4FCWrgpkji3QY
-  port: 9102
-  server: 23.157.40.5
+  server: 185.193.49.88
   type: ss
   udp: true
 proxy-groups:
@@ -184,52 +128,36 @@ proxy-groups:
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -238,105 +166,73 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -359,27 +255,19 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇮🇷_IR_伊朗
-  - 🇩🇪_DE_德国_1
+  - 🇨🇳_CN_中国->🇿🇦_ZA_南非
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国_1
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇮🇷_IR_伊朗_1
+  - 🇷🇺_RU_俄罗斯->🇮🇳_IN_印度
+  - 🇮🇷_IR_伊朗_2
   - 🇺🇸_US_美国_2
   - 🇺🇸_US_美国_3
+  - 🇲🇩_MD_摩尔多瓦
+  - 🇬🇧_GB_英国
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇩🇪_DE_德国_2
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
+  - 🇷🇴_RO_罗马尼亚
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
