--- a/nodes/wenode.yaml
+++ b/nodes/wenode.yaml
@@ -34,10 +34,60 @@ mode: rule
 proxies:
 - ip-version: dual
   name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  password: 5e2f888c-68ef-11ef-96ca-f23c9164ca5d
+  password: RlzoEILU
+  port: 7815
+  server: 36.151.251.59
+  skip-cert-verify: true
+  type: trojan
+  udp: true
+- cipher: rc4-md5
+  ip-version: dual
+  name: 🇩🇪_DE_德国->🇨🇳_CN_中国
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 193.108.119.230
+  type: ss
+  udp: true
+- ip-version: dual
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+  password: d30d2718-91d5-11ef-b635-f23c9164ca5d
   port: 15229
-  server: 5abd5e38-swgsg0-swy6li-tni2.cu.plebai.net
+  server: 0ce06474-swin40-tba9vx-1qlps.cu.plebai.net
   skip-cert-verify: false
+  sni: 0ce06474-swin40-tba9vx-1qlps.cu.plebai.net
+  type: trojan
+  udp: true
+- cipher: aes-256-cfb
+  ip-version: dual
+  name: 🇺🇸_US_美国_1
+  password: awsps0501
+  port: 443
+  server: 35.91.97.85
+  type: ss
+  udp: true
+- ip-version: dual
+  name: 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  password: telegram-id-privatevpns
+  port: 22222
+  server: 13.61.140.186
+  sni: trojan.burgerip.co.uk
+  type: trojan
+  udp: true
+- cipher: aes-256-cfb
+  ip-version: dual
+  name: 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  password: f8f7aCzcPKbsF8p3
+  port: 989
+  server: 156.146.40.194
+  type: ss
+  udp: true
+- ip-version: dual
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  network: tcp
+  password: def14a51-e0d9-11ec-8429-f23c91cfbbc9
+  port: 15229
+  server: 4560c642-swin40-tjuq6l-wf62.cu.plebai.net
+  sni: 4560c642-swin40-tjuq6l-wf62.cu.plebai.net
   type: trojan
   udp: true
 - cipher: aes-256-cfb
@@ -48,18 +98,10 @@ proxies:
   server: 185.231.233.112
   type: ss
   udp: true
-- ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  password: 60f6b4c4-9d70-11ed-a4d2-f23c9164ca5d
-  port: 15229
-  server: 391907cc-swgsg0-t1bnjq-1krtb.cu.plebai.net
-  sni: 391907cc-swgsg0-t1bnjq-1krtb.cu.plebai.net
-  type: trojan
-  udp: true
 - alterId: 2
   cipher: auto
   ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
   network: ws
   port: 30829
   server: v29.heduian.link
@@ -73,57 +115,45 @@ proxies:
       host: ocbc.com
     path: /oooo
 - ip-version: dual
-  name: 🇺🇸_US_美国_1
-  password: a07cebde-351d-4ad3-8045-3cd0aa3f586c
-  port: 443
-  server: mg7.gy6688.xyz
-  skip-cert-verify: true
-  sni: mg7.gy6688.xyz
-  type: trojan
-  udp: true
-- alpn:
-  - http/1.1
-  ip-version: dual
-  name: 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  network: tcp
-  password: telegram-id-privatevpns
-  port: 22222
-  server: 56.228.78.101
-  sni: trojan.burgerip.co.uk
-  type: trojan
-  udp: true
-- ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-  password: d30d2718-91d5-11ef-b635-f23c9164ca5d
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+  password: 5e2f888c-68ef-11ef-96ca-f23c9164ca5d
   port: 15229
-  server: 0ce06474-swin40-tba9vx-1qlps.cu.plebai.net
-  skip-cert-verify: false
-  sni: 0ce06474-swin40-tba9vx-1qlps.cu.plebai.net
+  server: 13c2c931-swin40-swy6li-tni2.cu.plebai.net
+  sni: 13c2c931-swin40-swy6li-tni2.cu.plebai.net
   type: trojan
   udp: true
 - alterId: 2
   cipher: auto
   ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
   network: ws
-  port: 30825
-  server: v25.heduian.link
+  port: 30805
+  server: v5.heduian.link
+  skip-cert-verify: true
+  sni: ''
   type: vmess
   udp: true
   uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
   ws-opts:
     headers:
-      host: baidu.com
+      host: ocbc.com
     path: /oooo
-- ip-version: dual
-  name: 🇩🇪_DE_德国_1
-  password: telegram-id-directvpn
-  port: 22223
-  server: 3.120.242.252
-  skip-cert-verify: false
-  sni: trojan.burgerip.co.uk
-  type: trojan
+- alterId: 2
+  cipher: auto
+  ip-version: dual
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+  network: ws
+  port: 30808
+  server: v8.heduian.link
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
   udp: true
+  uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
+  ws-opts:
+    headers:
+      host: v8.heduian.link
+    path: /oooo
 - ip-version: dual
   name: 🇺🇸_US_美国_2
   network: ws
@@ -135,68 +165,21 @@ proxies:
   udp: true
   ws-opts:
     path: /ptGwaGzcA4KNAXX
-- alpn:
-  - http/1.1
+- cipher: chacha20-ietf-poly1305
   ip-version: dual
-  name: 🇺🇸_US_美国_3
-  network: ws
-  password: 2734c14b-e4ce-48b3-b3de-f80788cb4c47
-  port: 443
-  server: 104.21.84.58
-  skip-cert-verify: false
-  sni: XXXcddDe.IRaN2035.dpdNs.orG
-  type: trojan
-  udp: true
-  ws-opts:
-    path: /bdtuD5eD7Q29WxRG8DqNAB
-- ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  password: 5e2f888c-68ef-11ef-96ca-f23c9164ca5d
-  port: 15229
-  server: 13c2c931-swin40-swy6li-tni2.cu.plebai.net
-  sni: 13c2c931-swin40-swy6li-tni2.cu.plebai.net
-  type: trojan
-  udp: true
-- alpn:
-  - http/1.1
-  ip-version: dual
-  name: 🇺🇸_US_美国_4
-  network: ws
-  password: 15b24b56-d667-4fa8-b548-f3dc942fb461
-  port: 443
-  server: 104.21.15.232
-  skip-cert-verify: false
-  sni: ab2c7f0b-bf1b-4eb3-9884-256f4de3d.2030.pp.ua
-  type: trojan
-  udp: true
-  ws-opts:
-    path: /4p35eUnmGxQ8YJFJxz
-- ip-version: dual
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  network: tcp
-  password: def14a51-e0d9-11ec-8429-f23c91cfbbc9
-  port: 15229
-  server: 4560c642-swin40-tjuq6l-wf62.cu.plebai.net
-  sni: 4560c642-swin40-tjuq6l-wf62.cu.plebai.net
-  type: trojan
-  udp: true
-- cipher: aes-256-cfb
-  ip-version: dual
-  name: 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  password: f8f7aCzcPKbsF8p3
-  port: 989
-  server: 51.15.23.63
+  name: 🇳🇱_NL_荷兰
+  password: d3TphPPfMkIxFmPJpA0j7RkPJHjeHqaJk2D7Co7VsFuUU2v1
+  port: 31348
+  server: 45.128.151.67
   type: ss
   udp: true
-- alpn:
-  - http/1.1
-  ip-version: dual
-  name: 🇩🇪_DE_德国_2
-  password: telegram-id-directvpn
-  port: 22223
-  server: 35.156.196.176
+- ip-version: dual
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
+  password: 93fb69fc-77cf-11ee-85ee-f23c91369f2d
+  port: 15229
+  server: f1e4e0ee-swin40-t12cnj-1ol97.cu.plebai.net
   skip-cert-verify: false
-  sni: trojan.burgerip.co.uk
+  sni: f1e4e0ee-swin40-t12cnj-1ol97.cu.plebai.net
   type: trojan
   udp: true
 proxy-groups:
@@ -205,41 +188,39 @@ proxy-groups:
   - ♻️ 自动选择
   - DIRECT
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   tolerance: 5000
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -249,84 +230,80 @@ proxy-groups:
   - ♻️ 自动选择
   - 🎯 全球直连
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -350,21 +327,20 @@ proxy-groups:
   - 🎯 全球直连
   - ♻️ 自动选择
   - 🇨🇳_CN_中国->🇺🇸_US_美国_1
-  - 🇷🇺_RU_俄罗斯
+  - 🇩🇪_DE_德国->🇨🇳_CN_中国
   - 🇨🇳_CN_中国->🇺🇸_US_美国_2
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国->🇸🇪_SE_瑞典
+  - 🇸🇰_SK_斯洛伐克->🇺🇸_US_美国
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - 🇷🇺_RU_俄罗斯
   - 🇨🇳_CN_中国->🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_5
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
   - 🇨🇳_CN_中国->🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_4
   - 🇨🇳_CN_中国->🇺🇸_US_美国_7
-  - 🇬🇧_GB_英国->🇳🇿_NZ_新西兰
-  - 🇩🇪_DE_德国_2
+  - 🇺🇸_US_美国_2
+  - 🇳🇱_NL_荷兰
+  - 🇨🇳_CN_中国->🇺🇸_US_美国_8
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
